pkl-core/src/test/files/LanguageSnippetTests/input/errors/decodingException.pkl
res = Bytes(0xc0, 0xc1).decodeToString("UTF-8")
